
build-3:
- added DirAnimations for convenience
- added Economy code
- added record/playback code
- added wares code

build-2:
- options handling redesigned
- introduced System
- added keyboard input
- build symbols react to objects now (can't build next to stones etc...)
- only use 8 different types of trees (like Settlers 2)
- unique windows now remember their position
- improved fieldaction mouse placement for fast click-through
- new structure for tribe data
- new terrain textures
- added "fps" key to animations
- renderer uses player colors
- added flags
- added road building
- split of moving and non-moving objects in hierarchy